--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ h1 {
 #question {
     text-align: center;
     padding: 3em;
+    padding-bottom: 4em;
 }
 
 .btn-grid {
@@ -42,6 +43,10 @@ h1 {
     /* Center horizontally */
     align-items: center;
     /* Center vertically */
-    grid-gap: 15px;
-    /* 20px gap between grid items */
+}
+
+.score-board {
+    text-align: center;
+    justify-items: center;
+    padding: 3em;
 }
