Style buttons in css and java script

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 .btn {
-    background-color: yellow;
+    background-color: #FF74F1;
     width: 100%;
     /* Make buttons take up the full width of their columns */
     padding: 10px;
@@ -52,7 +52,7 @@ h1 {
 }
 
 .btn:hover {
-    background-color: white;
+    background-color: #CD42BF;
 }
 
 .score-board {
