--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,11 @@ h1 {
 
 .btn:hover {
     background-color: #CD42BF;
+    color: white;
+}
+
+.btn:active {
+    font-weight: bold;
 }
 
 .score-board {
